src/reset.css
* {
	box-sizing: border-box;
	scrollbar-color: var(--col-frost) transparent;
	scrollbar-width: thin;
}

body {
	overflow-x: hidden;

	--col-bg: var(--col-surface);
	--col-on: var(--col-on-surface);
	--col-em: var(--col-em-surface);
}

h1, h2, h3, h4, h5, h6 {
	margin: 0;
}

h1, h2, h3, h4 {
	color: var(--col-em);
}

button {
	padding: 0;
}

ul {
	margin: 0;
	padding-inline-start: 0;
}

a, a:link, a:visited {
	text-decoration: none;
	color: var(--col-on);
}

a[disabled] {
	pointer-events: none;
	opacity: var(--op-disabled);
	cursor: not-allowed;
}

hr {
	border: 1px solid var(--col-on);
}

details summary::marker {
	content: none;
}

*::-webkit-scrollbar {
	width: 0.25rem;
	background: var(--col-primary);
}
*::-webkit-scrollbar-thumb {
	width: 0.25rem;
	background: var(--col-frost);
	box-shadow: none;
}
*::-webkit-scrollbar-track, *::-webkit-scrollbar-track-piece {
	background: var(--col-on-primary);
}

/* vim: ts=4
 */

